# kristokeyboardwalkin

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ANALYSIS.md  ARCHITECTURE.md  FUZZY_HASHING.md  HASH_MODES.md  LAYOUTS.md  MUTATIONS.md  PATTERNS.md  REPORTING.md  SCORING.md
src/keywalk_audit/: __init__.py  cli.py
src/keywalk_audit/audit/: __init__.py  crack.py  report.py  reporters.py  runner.py
src/keywalk_audit/fuzzy/: __init__.py  geometric_minhash.py  string_minhash.py
src/keywalk_audit/hashing/: __init__.py  algorithms.py  cisco_type7.py  computer.py  hashcat_runner.py  md4.py  mutations.py
src/keywalk_audit/layouts/: __init__.py  azerty_fr.py  base.py  colemak.py  dvorak.py  numpad.py  phone_keypad.py  qwerty_intl.py  qwerty_uk.py  qwerty_us.py  qwertz_de.py
src/keywalk_audit/rainbow/: __init__.py  builder.py  lookup.py  schema.py
src/keywalk_audit/sam/: __init__.py  autodetect.py  hive_parser.py  pwdump_parser.py
src/keywalk_audit/walks/: __init__.py  analysis.py  fingerprint.py  generator.py  patterns.py  scorer.py  variants.py
tests/: conftest.py  test_analysis.py  test_audit_runner.py  test_autodetect.py  test_cisco_type7.py  test_cli.py  test_cli_commands.py  test_crack.py  test_fingerprint.py  test_fuzzy_geometric.py  test_fuzzy_string.py  test_generator.py  test_hashing.py  test_hive_parser.py  test_layouts.py  test_md4.py  test_mutations.py  test_patterns.py  test_pwdump_parser.py  test_rainbow_builder.py  test_reporters.py  test_scorer.py  test_variants.py
tests/fixtures/: sample_pwdump.txt
